# aegis-omega

./: .gitignore  COMMANDS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: test_benchmarks.py
docs/: AEGIS_Omega_Proposal.tex  Makefile  conf.py
examples/: 01_eu_ai_act_compliance.py  02_zero_knowledge_proofs.py  03_categorical_composition.py
isabelle/: AEGIS_Omega_Base.thy
scripts/: setup.ps1  setup.sh
src/aegis_omega/: __init__.py
src/aegis_omega/category_theory/: __init__.py
src/aegis_omega/core/: __init__.py  aegis.py
src/aegis_omega/mfotl/: __init__.py
src/aegis_omega/zkml/: __init__.py
tests/: __init__.py  conftest.py  test_aegis_omega.py
