[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-omega"
version = "0.1.0"
description = "AEGIS-Ω: Universal AI Safety Protocol - The TCP/IP of AI Safety Infrastructure"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "H M Shujaat Zaheer", email = "shujaat.zaheer@example.com"},
]
maintainers = [
    {name = "H M Shujaat Zaheer", email = "shujaat.zaheer@example.com"},
]
keywords = [
    "ai-safety",
    "runtime-verification",
    "mfotl",
    "zero-knowledge-proofs",
    "formal-methods",
    "eu-ai-act",
    "category-theory",
    "monitoring",
    "compliance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.24.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]
crypto = [
    "pycryptodome>=3.18.0",
    "py-ecc>=6.0.0",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0",
]
all = [
    "aegis-omega[dev,crypto,ml,docs]",
]

[project.urls]
Homepage = "https://github.com/hmshujaatzaheer/aegis-omega"
Documentation = "https://aegis-omega.readthedocs.io"
Repository = "https://github.com/hmshujaatzaheer/aegis-omega"
Issues = "https://github.com/hmshujaatzaheer/aegis-omega/issues"
Changelog = "https://github.com/hmshujaatzaheer/aegis-omega/blob/main/CHANGELOG.md"

# CLI entry point (future implementation)
# [project.scripts]
# aegis = "aegis_omega.cli:main"

[project.entry-points."aegis_omega.plugins"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aegis_omega*"]

[tool.setuptools.package-data]
aegis_omega = ["py.typed", "*.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "--strict-markers",
    "-ra",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "crypto: marks tests requiring cryptographic libraries",
]

[tool.coverage.run]
source = ["src/aegis_omega"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["aegis_omega"]
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "torch.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001"]  # Unused function argument (fixtures)
